<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="26dip"
        android:textColor="@color/merah"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="20dip"
        android:text="@string/dash_title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:textSize="16dip"
        android:textColor="@color/biru"
        android:layout_marginBottom="40dip"
        android:text="@string/dash_version" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hijau"
        android:layout_marginBottom="30dip"
        android:text="@string/dash_btn_profil" />

    <Button
        android:id="@+id/btnMataKuliah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tosca"
        android:layout_marginBottom="30dip"
        android:text="@string/dash_btn_matakuliah" />

    <Button
        android:id="@+id/btnProdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/merah_muda"
        android:layout_marginBottom="30dip"
        android:text="@string/dash_btn_prodi" />

    <Button
        android:id="@+id/btnKalkulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:background="@color/orange"
        android:text="@string/dash_btn_calc" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/biru"
        android:text="@string/dash_btn_logout" />
</LinearLayout>